--- a/application/templates/busyness/new.html
+++ b/application/templates/busyness/new.html
@@ -2,16 +2,79 @@
 
 {% block body %}
 <form method="POST" action="{{ url_for('busyness_create') }}">
-    <p>Kiireellisyysluokan nimi</p>
-    <input type="text" name="name"/>
-    <p>Lääkäreitä</p>
-    <input type="text" name="laakareita"/>
-    <p>Sairaanhoitajia</p>
-    <input type="text" name="sairaanhoitajia"/>
-    <p>Perushoitajia</p>
-    <input type="text" name="perushoitajia"/>
-    <br>
-    <br>
-    <input type="submit" value="Lisää"/>
+  <table>
+    <tr>
+      <td>
+        {{ form.name.label }}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.name }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.name.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.laakareita.label }}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.laakareita }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.laakareita.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.sairaanhoitajia.label }}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.sairaanhoitajia }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.sairaanhoitajia.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.perushoitajia.label }}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.perushoitajia }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.perushoitajia.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="submit" value="Lisää"/>
+      </td>
+    </tr>
 </form>
 {% endblock %}
