--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -17,6 +17,8 @@
     <ul>
       <li><a href="{{ url_for('busyness_index') }}">Lista kiireellisyysluokista</a></li>
       <li><a href="{{ url_for('busyness_form') }}">Lisää kiireellisyysluokka</a></li>
+      <li><a href="{{ url_for('hour_index') }}">Lista aukiolotunneista</a></li>
+      <li><a href="{{ url_for('hour_form') }}">Määritä aukiolotunteja</a></li>
     </ul>
 
     {% block body %}
