--- a/application/templates/employee/addHours.html
+++ b/application/templates/employee/addHours.html
@@ -39,6 +39,23 @@
     </tr>
     <tr>
       <td>
+        {{ form.end.label }}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        {{ form.end }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.end.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td>
         {{ form.employee.label }}
       </td>
     </tr>
