fixes and updates

--- a/application/templates/employee/select.html
+++ b/application/templates/employee/select.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td>
-        <input type="submit" value="Näytä työvuorot"/>
+        <input type="submit" value="Valitse"/>
       </td>
     </tr>
 </form>
