--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -33,7 +33,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Työntekijät</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('employee_index') }}">Lista työntekijöistä</a>
-              <a class="dropdown-item" href="{{ url_for('employee_form') }}">Lisää työntekijöitä</a>
+              <a class="dropdown-item" href="{{ url_for('employee_form') }}">Lisää työntekijä</a>
               <a class="dropdown-item" href="{{ url_for('employee_select') }}">Työntekijäkohtaiset työtunnit</a>
             </div>
           </li>
