--- a/application/templates/employee/list.html
+++ b/application/templates/employee/list.html
@@ -14,6 +14,16 @@
       <td>{{ employee.role }}</td>
       <td>{{ employee.hoursPerDay }}</td>
       <td>{{ employee.hoursPerWeek }}</td>
+      <td>
+        <form method="POST" action="{{ url_for('employee_edit', employee_id=employee.id) }}">
+          <input type="submit" value="Muokkaa"/>
+        </form>
+      </td>
+      <td>
+        <form method="POST" action="{{ url_for('employee_delete', employee_id=employee.id) }}">
+          <input type="submit" value="Poista"/>
+        </form>
+      </td>
     </tr>
     {% endfor %}
   </table>
